--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
             <div class="col-12">
                 <div class="social-row">
                     <div class="soc-item">
-                        <a href="https://mobiri.se/" target="_blank">
+                        <a href="https://t.me/+eu0FL0fRJU44NTQ1" target="_blank">
                             <span class="mbr-iconfont socicon-telegram socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://x.com/" target="_blank">
+                        <a href="https://x.com/Cl0udChuckler" target="_blank">
                             <span class="mbr-iconfont socicon-twitter socicon"></span>
                         </a>
                     </div>
