--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 	        	<h3 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-5" style="color: white">
 	          		<strong>Contract Address : </strong>
 	        	</h3>
-	        	<p class="etherscan mbr-text mbr-fonts-style mb-4 display-7"><strong>...</strong></p><br>
+	        	<p class="etherscan mbr-text mbr-fonts-style mb-4 display-7"><strong>0xB6B88324b1649f8039F192b62cCA0Dd440367061</strong></p><br>
 	        	<hr class="newlines">
 	        </div>
 	        	
